# Orbitbrief-Core

./: .gitignore  .importlinter  FRONTEND_INTEGRATION_README.md  LEGACY.md  PHASE_1_75_RESULTS.md  README.md  README_PARSER_SANDWICH_CUTOVER.md  SYSTEM_README.md  compile_brief.py  compile_corpus.py  pm_handoff.sh  pyproject.toml  pytest.ini
docs/: ANALYST_REVIEW_PROMPT.md  CHATGPT_PRO_BRAIN_FILL_PROMPT.md  PM_OUTPUT_SPEC.md  PM_QUESTION_LEARNING.md  polish_examples_optbot.json  professional_services_stage2_coverage.md  v46_RISK_PROPAGATION_NET.md
orbitbrief-core-worker/: Dockerfile  README.md  app.py  compile_run.py  db.py  requirements.txt
tests/: __init__.py  conftest.py  helpers.py  test_contract_validation.py  test_coverage_audit.py  test_drawing_ingestor.py  test_envelope_contract.py  test_heads.py  test_planner_and_provenance.py  test_registry_integration.py  test_seam_envelope_consumer.py  test_site_roster_alias_mapping.py  test_spreadsheet_ingestor.py  test_text_narrative_foundation.py  test_transcript_ingestor.py
tools/: .raw_open_baseline.json  brain_judge_eval.py  build_corpus_metrics.py  build_demo_showcase.py  build_finding_closure.py  build_handoff_bundle.py  build_pm_handoff.py  build_pm_question_queue.py  build_publishability_report.py  build_survival_map.py  check_no_raw_open.py  check_sow_completeness.py  close_deal.py  corpus_findings.yaml  demo_end_to_end.py  envelope_backfill.py  envelope_backfill_v2.py  envelope_diff.py  eval_corpus.py  evaluate_site_schematic_gold.py  extract_briefing_configs.py  extract_domain_packs.py  extract_raw_corpus.py  generate_site_roster_mapping_assets.py  generate_stage2_runtime_artifacts.py  inject_brain_blocks.py  orbitbrief_corpus_contract.yaml  orbitbrief_regression_gate.py  (+9 more)
(+1183 files in other folders)
