[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitbrief-core"
version = "0.1.0"
description = "Stage 2 runtime spine for OrbitBrief professional services"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "openpyxl>=3.1.2",
  "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
