[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitbrief-core"
version = "0.1.0"
description = "Stage 2 runtime spine for OrbitBrief professional services"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "openpyxl>=3.1.2",
  "jsonschema>=4.23.0",
  # Phase-1 evidence_runtime backend: single-file embedded SQL with JSON
  # support. We pin the major to keep the on-disk file format stable.
  "duckdb>=1.0,<2.0",
  # parser-os: Phase-0 seam. Source of truth for EvidenceAtom, SourceRef,
  # CompileResult, Manifest, and the orbitbrief.input.v2 envelope.
  # Pin via Git tag in CI; editable local path for dev velocity.
  "purtera-evidence-mvp @ file:///Users/purtera/dev/purtera/parser-os-repo",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "import-linter>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
